@@ -11,6 +11,11 @@
 		color: $studio-red-60;
 	}
 
+	.account-status__info__yellow {
+		fill: $studio-yellow-30;
+		color: $studio-yellow-30;
+	}
+
 	svg {
 		margin: 0 0.2rem;
 		position: relative;
